--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="white">#fafafa</color>
     <color name="black">#000</color>
+    <color name="Darkblue">#286bbd</color>
 </resources>
